2005-05-09  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* Documentation/user/lilypond-book.itely : Clarify and correct how
	to call dvips with -h psfonts.

2005-05-09  Jan Nieuwenhuizen  <janneke@gnu.org>

	* Documentation/user/instrument-notation.itely (Entering lyrics):
	Typo.  Fixes build.

2005-05-09  Graham Percival  <gperlist@shaw.ca>

	* Documentation/user/lilypond-book.itely: document PSFONTS file.

	* Documentation/user/lilypond.tely, lilypond-book.itely,
	tutorial.itely: change references to 2.5.x to 2.6.x.

	* Documentation/user/instrument-notation.itely: clarified \addlyrics
	vs \lyricmode.

	* Documentation/user/invoking.itely: remove old info about
	lilypond-profile.

	* Documentation/topdocs/INSTALL.texi: remove old info about
	lilypond-profile, add warning about needing international fonts
	to build docs.

2005-05-09  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/include/grob-info.hh (class Grob_info): make data member
	private. Changes throughout.

	* input/regression/alignment-order.ly: new file. 

	* lily/vertical-align-engraver.cc (acknowledge_grob): read
	alignAboveContext and alignBelowContext

2005-05-08  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/pfb.cc (LY_DEFINE): add cast.

	* scm/framework-ps.scm (write-preamble): embed CFFs if file name
	matches .otf
	(write-preamble): warn about unknown fonts.

	* lily/pfb.cc (Module): new function ly:otf->cff

	* lily/open-type-font.cc (get_otf_table): use ::get_otf_table
	(get_otf_table): new function.

2005-05-07  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scm/backend-library.scm (postscript->png): call lilypond-ps2png
	iso. ps2png.

2005-05-06  Heikki Junes  <hjunes@cc.hut.fi>

	* po/fi.po: apply second round of update.

2005-05-06  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scm/x11-color.scm (make-x11-color-handler): don't use
	#\sp. Apparently doesn't work on all platforms. 

2005-05-06  Graham Percival  <gperlist@shaw.ca>

	* Documentation/user/advanced-notation.itely, putting.itely,